@@ -2,14 +2,17 @@
 	- updated version of internal OTF to 1.6.5openmpi
 	  (see extlib/otf/ChangeLog)
 	- added functions 'MPI_Group_range_<incl|excl>' to Fortran MPI wrappers 
-	- added environment variable VT_METRICS_SEP to specify a string which separate
-	  the counter names in VT_METRICS 
+	- added environment variable VT_METRICS_SEP to specify a string which
+	  separate the counter names in VT_METRICS
+	- fixed detection of unique node id on MacOS platforms
+	- fixed support for LAM/MPI
 	- fixed build error: do not add objects from the static version of the
 	  BFD library to the shared VT libraries, because the BFD objects might
 	  be built without position independent code (PIC)
+	- patched libtool to avoid a bug in detection of the PGI 10 compilers
 
 5.8openmpi
-	- updated version of internal OTF to 1.6.4stingray
+	- updated version of internal OTF to 1.6.4openmpi
 	  (see extlib/otf/ChangeLog)
 	- added support for tracing calls to arbitrary third party libraries
 	  The new tool 'vtlibwrapgen' can be used to generate a wrapper library.
